--- a/src/views/login/index.less
+++ b/src/views/login/index.less
@@ -9,7 +9,7 @@
   margin: auto!important;
 }
 body{
-  background: rgba(0, 0, 0, 0.5)!important;
+  // background: rgba(0, 0, 0, 0.5)!important;
 }
 #components-form-demo-normal-login .login-form-forgot {
   float: right;
